--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="caixa-principal">
+    <h1>futuro da IA</h1>
+<div class="caixa-perguntas"></div>
+<div class="caixa-alternativas"></div>
+<div class="caixa-resultado">
+    <p class="texto-resultado"></p>
+    </div>
+</div>
+<script src="script.js"></script>
+
 
     
 
